--- a/src/components/badge.css
+++ b/src/components/badge.css
@@ -1,16 +1,15 @@
 .badge {
   animation: blink 2s linear infinite
-  
 }
 
 @keyframes blink {
   0% {
-    box-shadow: 0px 0px 10px red;
+    box-shadow: 0px 0px 7px 2px;
   }
   50% {
-    box-shadow: 0px 0px 5px red;
+    box-shadow: 0px 0px 4px 1px;
   }
   100% {
-    box-shadow: 0px 0px 10px red;
+    box-shadow: 0px 0px 7px 2px;
   }
 }
