--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
 
 .user:hover {
   box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.36), 0 8px 10px -6px rgba(0, 0, 0, 0.37),
-  inset -2px -2px 10px #5e5e5e, inset 5px 5px 5px #fff;
+  inset -2px -2px 10px #424242, inset 5px 5px 5px #fff;
   transform: scale(1.05);
 }
 
