--- a/src/components/badge.css
+++ b/src/components/badge.css
@@ -4,12 +4,12 @@
 
 @keyframes blink {
   0% {
-    box-shadow: 0px 0px 7px 2px;
+    box-shadow: 0 0 7px 2px;
   }
   50% {
-    box-shadow: 0px 0px 4px 1px;
+    box-shadow: 0 0 4px 1px;
   }
   100% {
-    box-shadow: 0px 0px 7px 2px;
+    box-shadow: 0 0 7px 2px;
   }
 }
